Fix fwd/reply/reply all buttons in dark mode

--- a/_sass/pm-styles/_pm-dark-theme.scss
+++ b/_sass/pm-styles/_pm-dark-theme.scss
@@ -5,7 +5,7 @@
 @import "./pm-buttons-mixins";
 
 // forms/buttons
-.pm-button,
+.pm-button:not(.pm-button--primary),
 .pm-button--info  {
   @include pm-button-dark;
 }
